# rust-actix-with-otel

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  otel-collector-config.yaml  tempo.yaml
grafana-provisioning/datasources/: datasource.yaml
src/: main.rs
src/handlers/: index.rs  todo.rs
src/models/: todo.rs
src/services/: todo_service.rs
src/telemetry/: init.rs
