[package]
name = "rust-actix-with-otel"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
opentelemetry-instrumentation-actix-web = "0.23.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
opentelemetry-stdout = "0.31.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-opentelemetry = "0.32.0"
tracing-actix-web = "0.7"
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
